# rat-remote-access-trojan

./: README.md
remote-admin-tool-final-complete/: .gitignore  Cargo.toml  QUICKSTART.md  README.md  USAGE_EXAMPLES.md
remote-admin-tool-final-complete/agent/: Cargo.toml  build.rs
remote-admin-tool-final-complete/agent/src/: main.rs
remote-admin-tool-final-complete/controller/: Cargo.toml
remote-admin-tool-final-complete/controller/src/: main.rs  stream_viewer.rs
